css引入目录修改

--- a/qky-stus_function.html
+++ b/qky-stus_function.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8">
 <title></title>
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-<link rel="stylesheet" href="style/weui.css"/>
-<link rel="stylesheet" href="style/weui2.css"/>
-<link rel="stylesheet" href="style/nav_left.css"/>
-<link rel="stylesheet" href="style/qky_stus.css"/>
+<link rel="stylesheet" href="css/weui.css"/>
+<link rel="stylesheet" href="css/weui2.css"/>
+<link rel="stylesheet" href="css/nav_left.css"/>
+<link rel="stylesheet" href="css/qky_stus.css"/>
 <link rel="stylesheet" type="text/css" href="icon_font/iconfont.css"/>
 <script src="js/zepto.min.js"></script>
 <script>
@@ -40,7 +40,7 @@ document.addEventListener("DOMContentLoaded", function(){
 	</section>
 
       <div class="weui_btn_primary weui-header"> 
-          <div class="weui-header-left"> <a class="icon icon-list btn-slide-bar"></a>  </div>
+          <div class="weui-header-left"> <a class="icon icon-list f18 btn-slide-bar"></a>  </div>
           <h1 class="weui-header-title">功能首页</h1>
            
       </div>
