--- a/qky-stus_roles.html
+++ b/qky-stus_roles.html
@@ -4,10 +4,11 @@
 <meta charset="utf-8">
 <title></title>
  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-  <link rel="stylesheet" href="style/weui.css"/>
-  <link rel="stylesheet" href="style/weui2.css"/>
-  <link rel="stylesheet" href="style/qky_stus.css"/>
-      <script src="js/zepto.min.js"></script>
+  <link rel="stylesheet" href="css/weui.css"/>
+  <link rel="stylesheet" href="css/weui2.css"/>
+  <link rel="stylesheet" href="css/qky_stus.css"/>
+  <link rel="stylesheet" type="text/css" href="icon_font/iconfont.css"/>
+  <script src="js/zepto.min.js"></script>
 </head>
 
 <body ontouchstart>
