--- a/qky-stus_roles.html
+++ b/qky-stus_roles.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>学生综合素质评价</title>
  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
   <link rel="stylesheet" href="css/weui.css"/>
   <link rel="stylesheet" href="css/weui2.css"/>
@@ -15,7 +15,7 @@
     <div class="pad_15">
        <div class="f-black mar_tb15">选择身份：</div>
        <div class="weui_panel weui_panel_access mar_b15">
-                <a href="javascript:void(0);" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                <a href="teacher_html/teacher_evaluate.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd circle roles_pic bs">
                         <img class="weui_media_appmsg_thumb circle" src="images/teacher_tx.jpg" alt="">
                     </div>
