教师-学生评价

--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -46,7 +46,7 @@ document.addEventListener("DOMContentLoaded", function(){
       </div>
        <div class="weui_panel weui_panel_access">
             <div class="weui_panel_bd">
-                <a href="javascript:void(0);" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                <a href="teacher_evaluate.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd">
                         <span class="icon icon-27 f45 middle f-green"></span>
                     </div>
