更新评价选择班级样式，评价记录一二级指标响应式呈现。

--- a/teacher_html/stus_list.html
+++ b/teacher_html/stus_list.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 <link rel="stylesheet" href="../css/weui.css"/>
 <link rel="stylesheet" href="../css/weui2.css"/>
-<link rel="stylesheet" href="../css/qky_stus.css"/>
+<link rel="stylesheet" href="../css/qky_grow.css"/>
 <link rel="stylesheet" type="text/css" href="../icon_font/iconfont.css"/>
 <script src="../js/zepto.min.js"></script>
 
