--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="../css/weui.css"/>
 <link rel="stylesheet" href="../css/weui2.css"/>
 <link rel="stylesheet" href="../css/nav_left.css"/>
-<link rel="stylesheet" href="../css/qky_stus.css"/>
+<link rel="stylesheet" href="../css/qky_grow.css"/>
 <link rel="stylesheet" type="text/css" href="../icon_font/iconfont.css"/>
 <script src="../js/zepto.min.js"></script>
 <script>
