--- a/teacher_html/teacher_evaluate.html
+++ b/teacher_html/teacher_evaluate.html
@@ -93,7 +93,7 @@ $('.weui-number-plus').click(function(){
 
       <div class="weui_btn_primary weui-header z-ind1000"> 
           <div class="weui-header-left"> <a href="teacher_function.html" class="icon icon-icon30 f20 btn-slide-bar"></a>  </div>
-          <h1 class="weui-header-title"  onclick="selectmenu('1');">一年级（2）班<i id="cell_1" class="icon icon-zhankaijiantou f-green"></i></h1>
+          <h1 class="weui-header-title"  onclick="selectmenu('1');">一年级（2）班<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f-green"></i></h1>
            
       </div>
 
