--- a/teacher_html/teacher_records.html
+++ b/teacher_html/teacher_records.html
@@ -66,7 +66,7 @@ $(function(){
 
       <div class="weui_btn_primary weui-header z-ind1000"> 
           <div class="weui-header-left"> <a href="teacher_evaluate.html" class="icon icon-109 f20 btn-slide-bar"></a>  </div>
-          <h1 class="weui-header-title"><a href="#" class="block">2017-03-13</a></h1>
+          <h1 class="weui-header-title"><a href="#" class="block">2017-03-13<i class="icon icon-rilixuanze mar_l5"></i></a></h1>
           <div class="weui-header-right"><a href="javascript:;" onclick="selectmenu('3');" class="weui_icon_search"></a></div> 
       </div>
       <div id="menu_3" style="display:none;">
