--- a/teacher_html/teacher_statistics.html
+++ b/teacher_html/teacher_statistics.html
@@ -66,8 +66,7 @@ $(function(){
 
       <div class="weui_btn_primary weui-header z-ind1000"> 
           <div class="weui-header-left"> <a href="teacher_evaluate.html" class="icon icon-109 f20 btn-slide-bar"></a>  </div>
-          <h1 class="weui-header-title"><a href="#" class="block">2017-03-13</a></h1>
-          <div class="weui-header-right"><a href="javascript:;" onclick="selectmenu('3');" class="weui_icon_search"></a></div> 
+          <h1 class="weui-header-title"  onclick="selectmenu('1');">2017-03-13<i id="cell_1" class="icon icon-zhankaijiantou f14 mar_l5 f-green"></i></h1>
       </div>
       <div id="menu_3" style="display:none;">
           <div class="searchbar_wrap">
@@ -359,7 +358,76 @@ $(function(){
         </div>
       </li>
      </ul> 
-       
     </div>
+
+<!--弹出日期班级--> 
+<div class="weui_msg_img hide abs" id="menu_1" style="display:none;">
+<div class="class_checks weui-border-tb tleft">
+    <div class="page-bd">  
+      <div class="weui_cells weui_cells_radio" >
+        <label class="weui_cell weui_check_label" for="x11">
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-01</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" class="weui_check" name="radio1" id="x11">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+        <label class="weui_cell weui_check_label" for="x12">
+
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-02</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" name="radio1" class="weui_check" id="x12" checked="checked">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+             <label class="weui_cell weui_check_label" for="x13">
+
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-03</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" name="radio1" class="weui_check" id="x13">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+        <label class="weui_cell weui_check_label" for="x11">
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-04</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" class="weui_check" name="radio1" id="x11">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+        <label class="weui_cell weui_check_label" for="x12">
+
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-05</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" name="radio1" class="weui_check" id="x12" checked="checked">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+             <label class="weui_cell weui_check_label" for="x13">
+
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-06</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" name="radio1" class="weui_check" id="x13">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+     </div>
+         
+    </div>
+</div>
+</div>
+
 </body>
 </html>
