默认头像更新

--- a/teacher_html/teacher_statistics.html
+++ b/teacher_html/teacher_statistics.html
@@ -380,7 +380,7 @@ $(function(){
                 <p>2017-02</p>
             </div>
             <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x12" checked="checked">
+                <input type="radio" name="radio1" class="weui_check" id="x12">
                 <span class="weui_icon_checked"></span>
             </div>
         </label>
@@ -390,36 +390,94 @@ $(function(){
                 <p>2017-03</p>
             </div>
             <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x13">
+                <input type="radio" name="radio1" class="weui_check" id="x13" checked="checked">
                 <span class="weui_icon_checked"></span>
             </div>
         </label>
-        <label class="weui_cell weui_check_label" for="x11">
+        <label class="weui_cell weui_check_label" for="x14">
             <div class="weui_cell_bd weui_cell_primary">
                 <p>2017-04</p>
             </div>
             <div class="weui_cell_ft">
-                <input type="radio" class="weui_check" name="radio1" id="x11">
+                <input type="radio" class="weui_check" name="radio1" id="x14">
                 <span class="weui_icon_checked"></span>
             </div>
         </label>
-        <label class="weui_cell weui_check_label" for="x12">
+        <label class="weui_cell weui_check_label" for="x15">
 
             <div class="weui_cell_bd weui_cell_primary">
                 <p>2017-05</p>
             </div>
             <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x12" checked="checked">
+                <input type="radio" name="radio1" class="weui_check" id="x15">
                 <span class="weui_icon_checked"></span>
             </div>
         </label>
-             <label class="weui_cell weui_check_label" for="x13">
+             <label class="weui_cell weui_check_label" for="x16">
 
             <div class="weui_cell_bd weui_cell_primary">
                 <p>2017-06</p>
             </div>
             <div class="weui_cell_ft">
-                <input type="radio" name="radio1" class="weui_check" id="x13">
+                <input type="radio" name="radio1" class="weui_check" id="x16">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+        <label class="weui_cell weui_check_label" for="x17">
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-07</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" class="weui_check" name="radio1" id="x17">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+        <label class="weui_cell weui_check_label" for="x18">
+
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-08</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" name="radio1" class="weui_check" id="x18" >
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+             <label class="weui_cell weui_check_label" for="x19">
+
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-09</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" name="radio1" class="weui_check" id="x19">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+        <label class="weui_cell weui_check_label" for="x20">
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-10</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" class="weui_check" name="radio1" id="x20">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+        <label class="weui_cell weui_check_label" for="x21">
+
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-11</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" name="radio1" class="weui_check" id="x21">
+                <span class="weui_icon_checked"></span>
+            </div>
+        </label>
+             <label class="weui_cell weui_check_label" for="x22">
+
+            <div class="weui_cell_bd weui_cell_primary">
+                <p>2017-12</p>
+            </div>
+            <div class="weui_cell_ft">
+                <input type="radio" name="radio1" class="weui_check" id="x22">
                 <span class="weui_icon_checked"></span>
             </div>
         </label>
