默认头像更新

--- a/qky-stus_roles.html
+++ b/qky-stus_roles.html
@@ -17,7 +17,7 @@
        <div class="weui_panel weui_panel_access mar_b15">
                 <a href="teacher_html/teacher_evaluate.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd circle roles_pic bs">
-                        <img class="weui_media_appmsg_thumb circle" src="images/teacher.png" alt="">
+                        <img class="weui_media_appmsg_thumb circle" src="images/teacher.jpg" alt="">
                     </div>
                     <div class="weui_media_bd">
                         <h3 class="weui_media_title f-black">教师</h3>
@@ -28,7 +28,7 @@
        <div class="weui_panel weui_panel_access mar_b15">
                 <a href="javascript:void(0);" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd circle roles_pic bs">
-                        <img class="weui_media_appmsg_thumb circle" src="images/student.png" alt="">
+                        <img class="weui_media_appmsg_thumb circle" src="images/student1.png" alt="">
                     </div>
                     <div class="weui_media_bd">
                         <h3 class="weui_media_title f-black">学生</h3>
@@ -39,7 +39,7 @@
        <div class="weui_panel weui_panel_access mar_b15">
                 <a href="javascript:void(0);" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd circle roles_pic bs">
-                        <img class="weui_media_appmsg_thumb circle" src="images/student.png" alt="">
+                        <img class="weui_media_appmsg_thumb circle" src="images/student1.png" alt="">
                     </div>
                     <div class="weui_media_bd">
                         <h3 class="weui_media_title f-black">学生</h3>
