--- a/teacher_html/teacher_evaluate.html
+++ b/teacher_html/teacher_evaluate.html
@@ -997,7 +997,7 @@ $('.weui-number-plus').click(function(){
          </a>
         </div>
         <div class="weui-menu-inner">
-         <a href="" class="weui_tabbar_item page-bd">
+         <a href="teacher_statistics.html" class="weui_tabbar_item page-bd">
             <em class="icon icon-tongji f-orange"></em>
             <span>评价统计</span>
          </a> 
