--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -44,7 +44,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <h1 class="weui-header-title">功能首页</h1>
            
       </div>
-       <div class="weui_panel weui_panel_access">
+       <div class="weui_panel weui_panel_access mar_t12">
             <div class="weui_panel_bd">
                 <a href="teacher_evaluate.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd">
