新增评价统计页面

--- a/teacher_html/teacher_statistics.html
+++ b/teacher_html/teacher_statistics.html
@@ -106,15 +106,15 @@ $(function(){
         <div class="weui_cell js-category l28">
            <i class="icon icon-zhankaijiantou mar_r5 f-999 f12"></i>
            <div class="weui_cell_bd weui_cell_primary"> <p>日常评价</p> </div>
-            <div class="f-orange f18"> +10</div> 
+            <div class="f-blue f18"> -10</div> 
             <div class="weui_cell_ft"></div>
         </div>
 
         <div class="page-category js-categoryInner bg-gray01">
                 
           <div class="weui_media_box weui_media_text weui-border-t">
-              <p class="weui_media_desc mar_b15">认真听课：<span class="f-blue f18">-2</span></p>
-              <p class="weui_media_desc mar_b5">课堂卫生：<span class="f-orange f18">+12</span></p>
+              <p class="weui_media_desc mar_b15">认真听课：<span class="f-blue f18">-12</span></p>
+              <p class="weui_media_desc mar_b5">课堂卫生：<span class="f-orange f18">+2</span></p>
           </div>
         </div>
       </li>
