--- a/teacher_html/teacher_calendar.html
+++ b/teacher_html/teacher_calendar.html
@@ -46,7 +46,7 @@ $(function(){
 
       <div class="weui_btn_primary weui-header z-ind1000"> 
           <div class="weui-header-left"> <a href="teacher_evaluate.html" class="icon icon-109 f20 btn-slide-bar"></a>  </div>
-          <h1 class="weui-header-title"  onclick="selectmenu('1');">2017-03<i id="cell_1" class="icon icon-zhankaijiantou f14 mar_l5 f-green"></i></h1>
+          <h1 class="weui-header-title"  onclick="selectmenu('1');">2017-03-13<i id="cell_1" class="icon icon-zhankaijiantou f14 mar_l5 f-green"></i></h1>
       </div>
       <div id="menu_3" style="display:none;">
           <div class="searchbar_wrap">
