--- a/teacher_html/teacher_statistics.html
+++ b/teacher_html/teacher_statistics.html
@@ -48,10 +48,7 @@ $(function(){
           <div class="weui-header-left"> <a href="teacher_evaluate.html" class="icon icon-109 f20 btn-slide-bar"></a>  </div>
           <h1 class="weui-header-title"  onclick="selectmenu('1');">2017-03<i id="cell_1" class="icon icon-zhankaijiantou f14 mar_l5 f-green"></i></h1>
       </div>
-      <div id="menu_3" style="display:none;">
-          <div class="searchbar_wrap">
-          </div>
-      </div>
+      
     <div class="weui_cells">
       <div class="weui_panel_bd ">
         <div class="weui_media_box weui_media_text page-bd pad_tb15">
@@ -69,12 +66,6 @@ $(function(){
                           21
                       </div>
                       <p class="weui_tabbar_label">年级排名</p>
-                  </span>
-                  <span class="weui_tabbar_item">
-                      <div class="weui_tabbar_icon f-blue f20">
-                         30
-                      </div>
-                      <p class="weui_tabbar_label">全校排名</p>
                   </span>
               </div>        
          
@@ -186,7 +177,7 @@ $(function(){
 
     </div>
 
-<!--弹出日期班级--> 
+<!--弹出日期--> 
 <div class="weui_msg_img hide abs" id="menu_1" style="display:none;">
 <div class="class_checks weui-border-tb tleft">
     <div class="page-bd">  
