新增学生评价页面

--- a/qky-stus_roles.html
+++ b/qky-stus_roles.html
@@ -26,7 +26,7 @@
                 </a>
         </div>        
        <div class="weui_panel weui_panel_access mar_b15">
-                <a href="javascript:void(0);" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                <a href="student_html/stu_function.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd circle roles_pic bs">
                         <img class="weui_media_appmsg_thumb circle" src="images/student1.png" alt="">
                     </div>
@@ -37,7 +37,7 @@
                 </a>
         </div>        
        <div class="weui_panel weui_panel_access mar_b15">
-                <a href="javascript:void(0);" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                <a href="student_html/stu_function.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd circle roles_pic bs">
                         <img class="weui_media_appmsg_thumb circle" src="images/student1.png" alt="">
                     </div>
