新增学生评价页面

--- a/student_html/stu_evaluate.html
+++ b/student_html/stu_evaluate.html
@@ -88,8 +88,8 @@ $(function(){
       
      <ul>
       
-      <li class="weui_panel_bd mar_0">
-        <div class="js-category weui_media_box weui_media_text weui-border-b">
+      <li class="weui_panel_bd mar_0 weui-border-t">
+        <div class="js-category weui_media_box weui_media_text">
               <h2 class="abs f-orange f29">+6</h2>
               <div class="weui_cell_bd weui_cell_primary"><h4 class="weui_media_title mar_0"><span class="f-black mar_r10 wlev01 l28">一级一级一</span><span class="f-666 f16 wlev02 l28">二级指标分内事</span></h4> </div>
         <i class="icon icon-zhankaijiantou abs"></i> 
@@ -128,8 +128,8 @@ $(function(){
                 </div>
         </div>
       </li>
-      <li class="weui_panel_bd mar_0">
-        <div class="js-category weui_media_box weui_media_text weui-border-b">
+      <li class="weui_panel_bd mar_0 weui-border-t">
+        <div class="js-category weui_media_box weui_media_text">
               <h2 class="abs f-blue f29">-6</h2>
               <div class="weui_cell_bd weui_cell_primary"><h4 class="weui_media_title mar_0"><span class="f-black mar_r10 wlev01 l28">一级一级一级指.wlev01就煽风点火标</span><span class="f-666 f16 wlev02 l28">二级指标一级一级一级lev01是记错分内事</span></h4> </div>
         <i class="icon icon-zhankaijiantou abs"></i> 
@@ -168,8 +168,8 @@ $(function(){
                 </div>
         </div>
       </li>
-      <li class="weui_panel_bd mar_0">
-        <div class="js-category weui_media_box weui_media_text weui-border-b">
+      <li class="weui_panel_bd mar_0 weui-border-t">
+        <div class="js-category weui_media_box weui_media_text">
               <h2 class="abs f-orange f29">+6</h2>
               <div class="weui_cell_bd weui_cell_primary"><h4 class="weui_media_title mar_0"><span class="f-black mar_r10 wlev01 l28">一级一级一级指.wlev01就煽风点火标</span><span class="f-666 f16 wlev02 l28">二级指标一级一级一级lev01是记错分内事</span></h4> </div>
         <i class="icon icon-zhankaijiantou abs"></i> 
@@ -208,8 +208,8 @@ $(function(){
                 </div>
         </div>
       </li>
-      <li class="weui_panel_bd mar_0">
-        <div class="js-category weui_media_box weui_media_text weui-border-b">
+      <li class="weui_panel_bd mar_0 weui-border-t">
+        <div class="js-category weui_media_box weui_media_text">
               <h2 class="abs f-orange f29">+6</h2>
               <div class="weui_cell_bd weui_cell_primary"><h4 class="weui_media_title mar_0"><span class="f-black mar_r10 wlev01 l28">一级一级一级指.wlev01就煽风点火标</span><span class="f-666 f16 wlev02 l28">二级指标一级一级一级lev01是记错分内事</span></h4> </div>
         <i class="icon icon-zhankaijiantou abs"></i> 
@@ -248,8 +248,8 @@ $(function(){
                 </div>
         </div>
       </li>
-      <li class="weui_panel_bd mar_0">
-        <div class="js-category weui_media_box weui_media_text weui-border-b">
+      <li class="weui_panel_bd mar_0 weui-border-t">
+        <div class="js-category weui_media_box weui_media_text">
               <h2 class="abs f-orange f29">+6</h2>
               <div class="weui_cell_bd weui_cell_primary"><h4 class="weui_media_title mar_0"><span class="f-black mar_r10 wlev01 l28">一级一级一级指.wlev01就煽风点火标</span><span class="f-666 f16 wlev02 l28">二级指标一级一级一级lev01是记错分内事</span></h4> </div>
         <i class="icon icon-zhankaijiantou abs"></i> 
@@ -288,8 +288,8 @@ $(function(){
                 </div>
         </div>
       </li>
-      <li class="weui_panel_bd mar_0">
-        <div class="js-category weui_media_box weui_media_text weui-border-b">
+      <li class="weui_panel_bd mar_0 weui-border-t">
+        <div class="js-category weui_media_box weui_media_text">
               <h2 class="abs f-orange f29">+6</h2>
               <div class="weui_cell_bd weui_cell_primary"><h4 class="weui_media_title mar_0"><span class="f-black mar_r10 wlev01 l28">一级一级一级指.wlev01就煽风点火标</span><span class="f-666 f16 wlev02 l28">二级指标一级一级一级lev01是记错分内事</span></h4> </div>
         <i class="icon icon-zhankaijiantou abs"></i> 
@@ -328,8 +328,8 @@ $(function(){
                 </div>
         </div>
       </li>
-      <li class="weui_panel_bd mar_0">
-        <div class="js-category weui_media_box weui_media_text weui-border-b">
+      <li class="weui_panel_bd mar_0 weui-border-t">
+        <div class="js-category weui_media_box weui_media_text">
               <h2 class="abs f-orange f29">+6</h2>
               <div class="weui_cell_bd weui_cell_primary"><h4 class="weui_media_title mar_0"><span class="f-black mar_r10 wlev01 l28">一级一级一级指.wlev01就煽风点火标</span><span class="f-666 f16 wlev02 l28">二级指标一级一级一级lev01是记错分内事</span></h4> </div>
         <i class="icon icon-zhankaijiantou abs"></i> 
