--- a/teacher_html/teacher_evaluate.html
+++ b/teacher_html/teacher_evaluate.html
@@ -37,6 +37,13 @@ $(function(){
                     }
 		  });
 	  });    
+ 
+ $(document).on("click", "#del-affirm", function() {
+        $.toast("删除成功");
+		$('.add-del_btnns').fadeIn();
+		$('.stus_del').fadeOut();
+		$('#button_sp_area').fadeOut();
+      }); 
 </script>
 <!--加减分-->
 <script>
@@ -107,11 +114,16 @@ $('.weui-number-plus').click(function(){
          <li class="weui_uploader_file tcenter p1 rel"><span class="weui-badge abs stus_del hide" style="display:none;" onClick="$('.p1').fadeOut();">-</span><img class="weui_media_appmsg_thumb circle border wh_40 center" src="../images/teacher_tx.jpg" alt=""><p class="f12 f-666 mar_t5">蔡友勋</p></li>               
          <li class="weui_uploader_file tcenter p2 rel"><span class="weui-badge abs stus_del hide" style="display:none;" onClick="$('.p2').fadeOut();">-</span><img class="weui_media_appmsg_thumb circle border wh_40 center" src="../images/teacher_tx.jpg" alt=""><p class="f12 f-666 mar_t5">蔡友勋222</p></li>               
        </ul>
-       <a class="weui_uploader_input_wrp f35 tcenter f45 f-999" href="stus_list.html" ></a>
-       <a class="weui_uploader_dele_wrp f35 tcenter f45 f-999" href="javascript:" onclick="$('.stus_del').fadeIn();"></a>
-      </div>
-     
+       <span class="add-del_btnns">
+       <a class="weui_uploader_input_wrp f35 tcenter f45 f-999 add_btn" href="stus_list.html"  onclick="$('.stus_del').fadeIn(),$('#button_sp_area').fadeIn(),$('.add-del_btnns').fadeOut();"></a>
+       <a class="weui_uploader_dele_wrp f35 tcenter f45 f-999 del_btn" href="javascript:" onclick="$('.stus_del').fadeIn(),$('#button_sp_area').fadeIn(),$('.add-del_btnns').fadeOut();"></a>
+       </span>
      </div>
+     </div>
+         <div class="button_sp_area page-bd mar_b15" id="button_sp_area" style="display:none;">
+            <a href="javascript:;" class="weui_btn weui_btn_mini weui_btn_primary bg-green mar_0" id="del-affirm">确认</a>
+            <a href="javascript:;" class="weui_btn weui_btn_mini weui_btn_default mar_0" onclick="$('.add-del_btnns').fadeIn(),$('.stus_del').fadeOut(),$('#button_sp_area').fadeOut();">取消</a>
+        </div>
     </div>
     </div>
     <div class="weui_cells weui_cells_access">    
