新增冷启动、404通用页，各页面修改图标调用class

--- a/teacher_html/stus_list.html
+++ b/teacher_html/stus_list.html
@@ -17,7 +17,7 @@
 <!--  选择学生 -->
 <div class="pages stus_list iphone bg-gray">
   <div class="weui_btn_primary weui-header"> 
-      <div class="weui-header-left"> <a href="teacher_evaluate.html" class="icon icon-109 f20 btn-slide-bar "></a>  </div>
+      <div class="weui-header-left"> <a href="teacher_evaluate.html" class="icon icon-icon1 f20 btn-slide-bar "></a>  </div>
       <h1 class="weui-header-title" >选择学生</h1>
       <div class="weui-header-right"><a href="teacher_evaluate.html" class="picker-button close-picker weui_btn weui_btn_mini bg-green">确认添加</a></div> 
   </div>
