--- a/teacher_html/teacher_function.html
+++ b/teacher_html/teacher_function.html
@@ -33,7 +33,7 @@ document.addEventListener("DOMContentLoaded", function(){
        </div>
 	   <ul class="pad_tb10">
 			<li><a href="#" class="f-white"><span class="icon icon-iconfontyonghu1  middle mar_r10"></span>学生信息</a></li>
-			<li><a href="../qky-stus_roles.html" class="f-white"><span class="icon icon-126  middle mar_r10"></span>切换身份</a></li>
+			<li><a href="../qky-stus_roles.html" class="f-white"><span class="icon icon-qiehuan middle mar_r10"></span>切换身份</a></li>
 			<li><a href="#" class="f-white"><span class="icon icon-icon  middle mar_r10"></span>关于我们</a></li>
 			<li><a href="#" class="f-white"><span class="icon icon-weixin  middle mar_r10"></span>返回微信</a></li>
 	   </ul>
