--- a/student_html/stu_statistics.html
+++ b/student_html/stu_statistics.html
@@ -45,7 +45,7 @@ $(function(){
 	
 
       <div class="weui_btn_primary weui-header z-ind1000"> 
-          <div class="weui-header-left"> <a href="stu_evaluate.html" class="icon icon-109 f20 btn-slide-bar"></a>  </div>
+          <div class="weui-header-left"> <a href="stu_evaluate.html" class="icon icon-icon1 f20 btn-slide-bar"></a>  </div>
           <h1 class="weui-header-title"  onclick="selectmenu('1');">2017-03<i id="cell_1" class="icon icon-zhankaijiantou f14 mar_l5 f-green"></i></h1>
       </div>
       
