1修改功能页首页图标， 2修改下拉菜单左缩进及班级字号， 3学生身份评价页面得分情况布局， 4教师身份评价记录无更多数据样式。

--- a/student_html/stu_evaluate.html
+++ b/student_html/stu_evaluate.html
@@ -44,35 +44,36 @@ $(function(){
 	
 
       <div class="weui_btn_primary weui-header "> 
-          <div class="weui-header-left"> <a href="stu_function.html" class="icon icon-icon30 f20 btn-slide-bar"></a>  </div>
+          <div class="weui-header-left"> <a href="stu_function.html"class="icon icon-shouye btn-slide-bar"><span class=" f14">首页</span></a>  </div>
           <h1 class="weui-header-title"><a href="stu_calendar.html" class="block">2017-03-16<i class="icon icon-rilixuanze mar_l5"></i></a></h1>
            
       </div>
     <div class="weui_cells">
       <div class="weui_panel_bd ">
-        <div class="weui_media_box weui_media_text page-bd pad_tb15">
-              <div class="weui_cell_bd weui_cell_primary"><h4 class="weui_media_title mar_0 tcenter pad_tb5"><span class="f-black wlev01 l28">兴趣班（1）班</span><span class="f-black mar_l10 wlev02 l28">王牧之</span></h4> </div>
+        <div class="weui_media_box weui_media_text page-bd">
+              <div class="weui_cell_bd weui_cell_primary pad_t10"><h4 class="weui_media_title mar_0 tcenter pad_tb5"><span class="f-black wlev01 l28">兴趣班（1）班</span><span class="f-black mar_l10 wlev02 l28">王牧之</span></h4> </div>
          
-              <div class="weui_tabbar bg-white rel">
-                  <span class="weui_tabbar_item">
+              <div class="weui_tabbar bg-white rel weui-border-t">
+                  <span class="weui_tabbar_item pad_tb10 weui-border-r rel">
+                     <span class="wb_arrow abs"></span>
                       <div class="weui_tabbar_icon f-red f26">
                           99
                       </div>
                       <p class="weui_tabbar_label">得分</p>
                   </span>
-                  <span class="weui_tabbar_item">
+                  <span class="weui_tabbar_item pad_tb10">
                       <div class="weui_tabbar_icon f-666 f20">
                           21
                       </div>
                       <p class="weui_tabbar_label">次数</p>
                   </span>
-                  <span class="weui_tabbar_item">
+                  <span class="weui_tabbar_item pad_tb10">
                       <div class="weui_tabbar_icon f-orange f20">
                           +21
                       </div>
                       <p class="weui_tabbar_label">加分</p>
                   </span>
-                  <span class="weui_tabbar_item">
+                  <span class="weui_tabbar_item pad_tb10">
                       <div class="weui_tabbar_icon f-blue f20">
                           -21
                       </div>
