--- a/teacher_html/teacher_records.html
+++ b/teacher_html/teacher_records.html
@@ -359,7 +359,10 @@ $(function(){
         </div>
       </li>
      </ul> 
-       
+
+<div class="weui-flex">
+            <div class="weui-flex-item"><div class="placeholder">没有更多数据了</div></div>
+        </div>
     </div>
 </body>
 </html>
