--- a/teacher_html/teacher_evaluate.html
+++ b/teacher_html/teacher_evaluate.html
@@ -99,7 +99,7 @@ $('.weui-number-plus').click(function(){
 	
 
       <div class="weui_btn_primary weui-header z-ind1000"> 
-          <div class="weui-header-left"> <a href="teacher_function.html" class="icon icon-icon30 f20 btn-slide-bar"></a>  </div>
+          <div class="weui-header-left"> <a href="teacher_function.html" class="icon icon-shouye btn-slide-bar"><span class=" f14">首页</span></a>  </div>
           <h1 class="weui-header-title"  onclick="selectmenu('1');">一年级（2）班<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14 f-green"></i></h1>
            
       </div>
@@ -145,7 +145,7 @@ $('.weui-number-plus').click(function(){
                           <div class="weui_cell_bd weui_cell_primary">
                               <p>课堂评价</p>
                           </div>
-                          <span id="cell_2" class="icon icon-zhankaijiantou f-green f14"></span>
+                          <span id="cell_2" class="icon icon-zhankaijiantou f-999 f12"></span>
                       </a>
                   </div>
               </div>
