弹出图片 点击退出效果
Signed-off-by: kathaline <yhc401@163.com>

--- a/teacher_html/teacher_reports.html
+++ b/teacher_html/teacher_reports.html
@@ -80,17 +80,20 @@ $(function(){
     </div>
 </div>
 <!--报告书-学生列表-->
-<div class="page-bd">
+<div class="page-bd weui_cells">
     <div class="weui-flex">
         <div class="weui-flex-item">
-          <div class="placeholder">
-            <div class="rep_users tcenter"><img class="weui_media_appmsg_thumb circle border wh_100 center left" src="../images/teacher_tx.jpg" alt=""></div> 
-            <p class="f16 l40 mar_l15 left">邓晓桢</p>  
+          <div class="placeholder bg-white">
+            <div class="rep_users tcenter"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/teacher_tx.jpg" alt=""></div> 
+            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p>  
           </div>
         </div>
-        <div class="weui-flex-item"><div class="placeholder">weui</div></div>
-        <div class="weui-flex-item"><div class="placeholder">weui</div></div>
-        <div class="weui-flex-item"><div class="placeholder">weui</div></div>
+        <div class="weui-flex-item">
+          <div class="placeholder bg-white">
+            <div class="rep_users tcenter"><img class="weui_media_appmsg_thumb circle border wh_100 center" src="../images/vcode.jpg" alt=""></div> 
+            <p class="f14  tcenter f-666 mar_tb5">邓晓桢</p>  
+          </div>
+        </div>
     </div>
 
 </div>
